--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,22 +1,22 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.activeBackground": "#600215",
-        "activityBar.background": "#600215",
+        "activityBar.activeBackground": "#004999",
+        "activityBar.background": "#004999",
         "activityBar.foreground": "#e7e7e7",
         "activityBar.inactiveForeground": "#e7e7e799",
-        "activityBarBadge.background": "#1b7d03",
+        "activityBarBadge.background": "#20000f",
         "activityBarBadge.foreground": "#e7e7e7",
         "commandCenter.border": "#e7e7e799",
-        "sash.hoverBorder": "#600215",
-        "statusBar.background": "#2e010a",
+        "sash.hoverBorder": "#004999",
+        "statusBar.background": "#003166",
         "statusBar.foreground": "#e7e7e7",
-        "statusBarItem.hoverBackground": "#600215",
-        "statusBarItem.remoteBackground": "#2e010a",
+        "statusBarItem.hoverBackground": "#004999",
+        "statusBarItem.remoteBackground": "#003166",
         "statusBarItem.remoteForeground": "#e7e7e7",
-        "titleBar.activeBackground": "#2e010a",
+        "titleBar.activeBackground": "#003166",
         "titleBar.activeForeground": "#e7e7e7",
-        "titleBar.inactiveBackground": "#2e010a99",
+        "titleBar.inactiveBackground": "#00316699",
         "titleBar.inactiveForeground": "#e7e7e799"
     },
-    "peacock.color": "#2e010a"
+    "peacock.color": "#003166"
 }
